fixed CSS bug of hide overflow on body; fixed navigation JS

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,8 +3,6 @@ html,
 body{
   height: 100%; width: 100%;
   margin: 0; padding: 0;
-  background: rgba(218,33,50,1);
-  overflow: hidden;
 }
 
 .cover{
